fix: change padding and color for scrollbar

--- a/src/components/CategoryList/CategoryList.module.css
+++ b/src/components/CategoryList/CategoryList.module.css
@@ -83,6 +83,8 @@
     flex-wrap: nowrap;
     overflow-x: auto;
     overflow-y: hidden;
+    padding-bottom: 10px;
+    scrollbar-color: var(--blue) var(--blue2);
   }
 
   .item {
